# hse-nlp-2026

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  Makefile  README.md  app.py  auth.py  docker-compose.yml  main.py  manage_users.py  pyproject.toml  tg_main.py  update_pyproject.py
.streamlit/: config.toml
pipeline/: chatbot.py  diarize.py  download.py  formatting.py  index.py  qa.py  rag.py  summarize.py  tools.py  transcribe.py  vad.py
