[project]
name = "nlp-hw"
version = "0.1.0"
description = "YouTube video summarizer (Russian) — local inference on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp==2026.3.3",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "pywhispercpp==1.4.1",
    "pyannote-audio==4.0.4",
    "langchain-openai==1.1.10",
    "langchain-community==0.4.1",
    "faiss-cpu==1.13.2",
    "sentence-transformers==5.2.3",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "tomli-w==1.2.0",
]
